--- a/wp-content/themes/safedescents/resources/assets/styles/pages/_buynow.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/pages/_buynow.scss
@@ -152,7 +152,7 @@ ol.form-progress {
 
   .buttons {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
 
     .btn {
       margin: 1em 1em 3em 1em;
