Yarn build production

--- a/wp-content/themes/safedescents/resources/assets/styles/components/_coverage-map.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/components/_coverage-map.scss
@@ -1,5 +1,5 @@
 .map-container {
-  background: url('../assets/images/map-bg.png');
+  background: url('../images/map-bg.jpg');
   background-size: cover;
   background-position: center;
 
