--- a/wp-content/themes/safedescents/resources/assets/styles/common/_typography.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/common/_typography.scss
@@ -39,7 +39,7 @@ h4 {
 h5 {
   font-family: $primary-font;
   font-weight: $font-weight-regular;
-  font-size: $font-size-regular;
+  font-size: 25px;
   text-transform: uppercase;
 }
 
