--- a/wp-content/themes/safedescents/resources/assets/styles/pages/_otherpages.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/pages/_otherpages.scss
@@ -9,3 +9,18 @@
 .entry-title {
   font-size: 35px;
 }
+
+.video-wrapper {
+  position: relative;
+  overflow: hidden;
+  padding-top: 56.25%;
+
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
+}
