--- a/wp-content/themes/safedescents/resources/assets/styles/common/_mediaqueries.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/common/_mediaqueries.scss
@@ -1,8 +1,9 @@
 @media (max-width: 767px) {
   // Homepage
-  .header-frontpage h1 {
-    width: auto;
-    top: 10%;
+  .header-frontpage {
+    .home-hero {
+      max-width: 80%;
+    }
   }
 
   .callout .callout-text {
