--- a/wp-content/themes/safedescents/resources/assets/styles/components/_buy-now-drawer.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/components/_buy-now-drawer.scss
@@ -133,6 +133,10 @@
       margin: 0 20px;
       padding: 10px;
       box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.6);
+
+      &.show {
+        display: block;
+      }
     }
 
     .state-name {
