Simplify buy now page. Start the process of changing date-range to start-date

--- a/wp-content/themes/safedescents/resources/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/layouts/_header.scss
@@ -43,6 +43,16 @@ header {
     top: 50%;
     position: relative;
   }
+
+  .page-buy-now & {
+    background: none;
+    height: auto;
+
+    .site-header {
+      background: $color-dark-slate;
+      position: relative;
+    }
+  }
 }
 
 // Global Site Logo
