--- a/wp-content/themes/safedescents/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/common/_global.scss
@@ -10,6 +10,11 @@ img {
   max-width: 1280px;
 }
 
+.container {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .row {
   margin-right: 0;
   margin-left: 0;
