--- a/wp-content/themes/safedescents/resources/assets/styles/layouts/_footer.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/layouts/_footer.scss
@@ -27,6 +27,10 @@ footer {
     height: 350px;
     object-fit: cover;
     object-position: bottom;
+
+    .page-buy-now.checkout-process & {
+      display: none;
+    }
   }
 
   .footer-copyright {
