--- a/wp-content/themes/safedescents/resources/assets/styles/components/_addskier.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/components/_addskier.scss
@@ -56,7 +56,7 @@
     transition: background 1s, transform 1.5s;
   }
 
-  &:hover, &:focus, &:active {
+  &:hover, &:focus {
     box-shadow: 0 0 10px lighten($color-medium-grey, 20%);
 
     .round {
