checkout page updates

--- a/wp-content/themes/safedescents/resources/assets/styles/main.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/main.scss
@@ -22,6 +22,7 @@
 @import "layouts/footer";
 @import "pages/homepage";
 @import "pages/buynow";
+@import "pages/buynowpartner";
 @import "pages/claims";
 @import "pages/otherpages";
 @import "common/mediaqueries";
