--- a/wp-content/themes/safedescents/resources/assets/styles/pages/_buynowpartner.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/pages/_buynowpartner.scss
@@ -27,10 +27,50 @@
   background: #EEE;
 }
 
+.partner-info img {
+  width: calc(100% - 15px);
+}
+
 .page-template-page-buy-now-partner header h1 {
   display: none;
 }
 
 form#buynowpartnerform .row {
   padding: 0 15px;
+}
+
+.price {
+  text-align: center;
+}
+
+.partner-sticky-cart {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 40px;
+  background: $color-dark-slate;
+  z-index: 1;
+
+  dl {
+    margin: 0 40px;
+    padding: 0;
+    height: 40px;
+    position: relative;
+  }
+
+  dt,dd {
+    display: inline-block;
+    height: 40px;
+    width: auto;
+    color: #FFF;
+    vertical-align: middle;
+    line-height: 40px;
+    margin: 0;
+    font-size: 12px;
+  }
+
+  dd {
+    margin-right: 15px;
+  }
 }
