updates for partners page

--- a/wp-content/themes/safedescents/resources/assets/styles/main.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/main.scss
@@ -23,6 +23,7 @@
 @import "pages/homepage";
 @import "pages/buynow";
 @import "pages/buynowpartner";
+@import "pages/partners";
 @import "pages/claims";
 @import "pages/otherpages";
 @import "common/mediaqueries";
